# ft_nm_otool

./: .gitignore  CMakeLists.txt  Makefile  README.md  makefile.mk
libft/: CMakeLists.txt  Makefile  conf.mk  makefile.mk
libft/include/: libft.h
libft/include/ft/: cdefs.h  ctype.h  opts.h  stdio.h  stdlib.h
libft/include/libft/: cty.h  ds.h  fs.h  io.h  lib.h  math.h  str.h  tys.h
libft/include/libft/ds/: lst.h
libft/src/: getopt.c  gnl.c  makefile.mk
libft/src/cty/: cty_3.c
libft/src/ctype/: ft_islower.c  ft_isupper.c
libft/src/ds/: alloc.c  aver.c  begin.c  clr.c  dtor.c  grow.c  lst.c  map.c  mdtor.c  nodelink.c  nodelput.c  noderput.c  nodeswap.c  nodeulink.c
libft/src/ex/: ex.c  ex_2.c
libft/src/glob/: ft_glob.c
libft/src/glob/internal/: path.c
libft/src/hash/: hash.c
libft/src/io/: fcntl.c  fflush.c  fmt.h  fopen.c  fputc.c  fputs.c  fwrite.c  ifs.c  ifs_2.c  stderr.c  stdin.c  stdio.c  stdout.c  vdprintf.c
libft/src/io/fmt/: eval.c  fmts.c  parse.c  type.c
libft/src/math/: imax.c  imin.c  pow.c  pow2_next.c  umax.c  umin.c
libft/src/opts/: ft_optparse.c  ft_optusage.c
libft/src/stdio/: ft_vasprintf.c
libft/src/stdio/internal/: internal.h  std.c
libft/src/stdlib/: ft_abs.c  ft_atoi.c  ft_atoll.c  ft_itoa.c  ft_qsort.c  ft_realpath.c  ft_strerror.c  ft_wctomb.c
libft/src/str/: memchr.c  mempcpy.c  stris.c
libft/src/string/: ft_memchr.c  ft_memdup.c  ft_strdup.c  ft_strndup.c
src/: makefile.mk  nm.c  nm.h  nm_seg.c  nm_sym.c  nm_sym_misc.c  obj.c  obj.h  ofile.c  ofile.h  ofile_ar.c  ofile_error.c  ofile_fat.c  ofile_get.c  ofile_mh.c  ofile_misc.c  ofile_swap.c  otool.c  otool.h  otool_seg.c
src/nm/: main.c  makefile.mk
src/otool/: main.c  makefile.mk
test/: a.txt  bin.txt  custom.txt  hell.txt  test.fish  test.sh
